--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
+    "bootstrap-icons": "^1.7.2",
     "core-js": "^3.6.5",
+    "line-awesome": "^1.3.0",
     "quasar": "^2.0.0",
     "vuex": "^4.0.1"
   },
